--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
-Django~=3.1.5
-requests~=2.25.1
+APScheduler==3.7.0
+asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.1.6
+django-apscheduler==0.5.2
+django-unixtimestampfield==0.4.0
+gunicorn==20.0.4
+idna==2.10
+psycopg2-binary==2.8.6
+pytz==2021.1
+requests==2.25.1
+six==1.15.0
+sqlparse==0.4.1
+tzlocal==2.1
+urllib3==1.26.3
